# Antarctica-cli

./: .gitignore  Cargo.toml  MARKDOWN_DEBUG.md  README.md  Required.md  dist-workspace.toml
.github/workflows/: release.yml
examples/: test_render.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/app/: mod.rs
src/components/: dialog.rs  markdown.rs  mod.rs
src/config/: mod.rs
src/events/: mod.rs
src/pages/: blog_edit.rs  blog_view.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs
src/ui/: mod.rs
src/utils/: mod.rs
wix/: main.wxs
