[package]
name = "antarctica-cli"
version = "0.1.0"
edition = "2021"
authors = ["CocaCora"]
repository = "https://github.com/CoraBlack/Antarctica-cli.git"
description = "Antarctica Blog CLI - A terminal-based blog management client"

[package.metadata.wix]
upgrade-guid = "BC7F47A5-EC48-4DFD-A5D6-0D02F59504AC"
path-guid = "AA85BC8D-C2B0-4B6D-BD21-BAE303216E07"
license = false
eula = false

[dependencies]
# TUI框架
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream", "bracketed-paste"] }

# HTTP客户端
reqwest = { version = "0.12.12", features = ["json"] }

# 序列化
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# 异步运行时
tokio = { version = "1.43.0", features = ["full"] }

# Markdown处理
pulldown-cmark = "0.13.0"

# 配置管理
dirs = "6.0.0"

# 错误处理
thiserror = "2.0.11"
anyhow = "1.0.95"

# 时间处理
chrono = { version = "0.4.39", features = ["serde"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"

# 输入处理
tui-textarea = "0.7.0"

# 主题和样式
ansi_term = "0.12.1"

# 密码输入
rpassword = "7.3.1"

[dev-dependencies]
tokio-test = "0.4.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
